# CurlHttpClient

./: .editorconfig  .gitignore  CHANGELOG.md  CurlHttpClient.slnx  Directory.Build.props  LICENSE  README.md  global.json
.github/workflows/: ci.yml  publish.yml
artifacts/performance/baseline/: notes.md  perf-harness.json
artifacts/performance/comparison/: before-after.md  rejected-optimizations.md  retained-optimizations.md
artifacts/performance/optimized/: buffer-sweep.md  perf-harness-multi.json  perf-harness-workers.json  perf-p1-blob.json  perf-p1-path.json  perf-p2.json
artifacts/review/: README.md  findings.md  qa-answers.md  verdict.md
benchmarks/CurlHttpClient.Benchmarks/: CurlHttpClient.Benchmarks.csproj  PerfHarness.cs  Program.cs
benchmarks/CurlHttpClient.Benchmarks/Properties/: launchSettings.json
consumer/: CurlHttpClient.Consumer.slnx  README.md  nuget.config
consumer/CurlHttpClient.ConsumerTests/: CurlHttpClient.ConsumerTests.csproj  HttpClientConsumerTests.cs  MiniHttpServer.cs
docs/: architecture.md  cipher-validation.md  deployment-ws2012r2.md  limitations.md  performance-notes.md  security-review.md  test-strategy.md  traceability-matrix.md  troubleshooting.md  versions.md
native/: vcpkg.json
native/CurlBridge/: CMakeLists.txt  CMakePresets.json
native/CurlBridge/include/: curl_bridge.h
native/CurlBridge/src/: abi_test_main.cpp  bridge_callbacks.cpp  bridge_ciphers.cpp  bridge_client.cpp  bridge_error.cpp  bridge_global.cpp  bridge_internal.h  bridge_multi.cpp  bridge_request.cpp  spike_main.cpp
native/triplets/: x64-windows-static-v142.cmake
samples/CurlHttpClient.Sample/: CurlHttpClient.Sample.csproj  Program.cs
src/CurlHttpClient/: CurlCipherManifest.cs  CurlHttpClient.csproj  CurlHttpClientDiagnostics.cs  CurlHttpClientOptions.cs  CurlHttpMessageHandler.cs  PACKAGE.md
src/CurlHttpClient.DependencyInjection/: CurlHttpClient.DependencyInjection.csproj  CurlHttpClientServiceCollectionExtensions.cs  PACKAGE.md
src/CurlHttpClient/Diagnostics/: CurlHttpEventSource.cs  CurlHttpEventSourceScope.cs  LogRedaction.cs
src/CurlHttpClient/Internal/: BoundedByteQueue.cs  CurlErrorMapper.cs  CurlMultiDispatcher.cs  CurlRequestContext.cs  CurlRequestDispatcher.cs  CurlResponseContent.cs  CurlResponseStream.cs  ICurlDispatcher.cs  ResponseHeaderParser.cs
src/CurlHttpClient/Native/: BridgeInterop.cs  CurlBridgeClientHandle.cs  NativeCallbacks.cs  NativeLibraryLoader.cs  NativeMethods.cs
tests/CurlHttpClient.IntegrationTests/: CancellationAndTimeoutTests.cs  CurlHttpClient.IntegrationTests.csproj  HttpBehaviorTests.cs  IntegrationTestServer.cs  MalformedResponseTests.cs  RawTcpServer.cs  ServerFixture.cs  SocketsHandlerParityTests.cs  TestCertificates.cs  TlsTests.cs
tests/CurlHttpClient.IntegrationTests/ApiCoverage/: ApiCoverageAttribute.cs  CoverageGateTests.cs  HttpClientApiInventory.cs  RuntimeDiagnosticsArtifactTests.cs  httpclient-api-baseline.json
tests/CurlHttpClient.IntegrationTests/CipherSuites/: CipherMatrixOrchestratorTests.cs  CipherSuiteTests.cs  ClientHelloCapture.cs  OpenSslCipherServer.cs  SchannelCipherSuiteTests.cs  SslStreamCipherServer.cs
tests/CurlHttpClient.IntegrationTests/Compression/: CompressionEdgeTests.cs
tests/CurlHttpClient.IntegrationTests/Content/: RequestContentTests.cs
tests/CurlHttpClient.IntegrationTests/Disposal/: DisposalLifecycleTests.cs
tests/CurlHttpClient.IntegrationTests/Errors/: ErrorMappingEdgeTests.cs
tests/CurlHttpClient.IntegrationTests/Headers/: HeaderBehaviorTests.cs
tests/CurlHttpClient.IntegrationTests/Infrastructure/: ArtifactsWriter.cs  CapturingLogger.cs  DeterministicPayload.cs  ManagedProxyServer.cs  TestGate.cs
tests/CurlHttpClient.IntegrationTests/Json/: JsonExtensionTests.cs
tests/CurlHttpClient.IntegrationTests/Lifetime/: ReviewRegressionTests.cs
tests/CurlHttpClient.IntegrationTests/Methods/: ClientMethodOverloadTests.cs  ClientPropertyTests.cs  CustomVerbTests.cs
tests/CurlHttpClient.IntegrationTests/Pooling/: ConnectionPoolingTests.cs
tests/CurlHttpClient.IntegrationTests/Properties/: launchSettings.json
tests/CurlHttpClient.IntegrationTests/Proxy/: ProxyBehaviorTests.cs
tests/CurlHttpClient.IntegrationTests/Redirects/: RedirectMatrixTests.cs
tests/CurlHttpClient.IntegrationTests/StatusCodes/: HttpFramingTests.cs  StatusCodeTests.cs
tests/CurlHttpClient.IntegrationTests/Stress/: PerformanceRegressionTests.cs  StressAndResourceTests.cs
tests/CurlHttpClient.Tests/: BoundedByteQueueTests.cs  CipherManifestTests.cs  CurlErrorMapperTests.cs  CurlHttpClient.Tests.csproj  OptionsAndTranslationTests.cs  ResponseHeaderParserTests.cs  ReviewFixTests.cs
tools/CurlHttpClient.Reports/: CurlHttpClient.Reports.csproj  Program.cs
(+7 files in other folders)
